--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
         
         <div id="text-question" style="display: none;">
-            <h2>Final Question</h2>
-            <input type="text" id="text-answer" placeholder="Type your answer here" />
-            <button id="lastbutton" onclick="submitTextAnswer()">Submit</button>
+            <h2>O que você achou do nosso estande?</h2>
+            <input type="text" id="text-answer" placeholder="Escreva aqui sua opinião" />
+            <button id="lastbutton" onclick="submitTextAnswer()">Envier</button>
         </div>
 
         <!-- Result Screen -->
