--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="text-question" style="display: none;">
             <h2>O que você achou do nosso estande?</h2>
             <input type="text" id="text-answer" placeholder="Escreva aqui sua opinião" />
-            <button id="lastbutton" onclick="submitTextAnswer()">Envier</button>
+            <button id="lastbutton" onclick="submitTextAnswer()">Enviar</button>
         </div>
 
         <!-- Result Screen -->
