Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="quiz-container">
         <!-- Start Screen -->
         <div id="start-screen">
-            <h1>Bem vindo ao quiz da amostra multidisciplinar!</h1>
+            <h1>Bem vindo ao quiz da mostra multidisciplinar!</h1>
             <button onclick="startQuiz()">Start Quiz</button>
         </div>
         
